<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_word"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/button_save"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="49dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:background="@color/colorPrimary"-->
<!--        android:text="@string/button_save"-->
<!--        android:textColor="@color/buttonLabel"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/edit_text"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/edit_name" />-->

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="371dp"
        android:layout_height="619dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_note"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        app:layout_constraintVertical_bias="0.196" />

    <!--    <Button-->
<!--        android:id="@+id/button_delete"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="49dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:background="@color/colorPrimary"-->
<!--        android:text="@string/button_delete"-->
<!--        android:textColor="@color/buttonLabel"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/edit_text"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toEndOf="@+id/button_save"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/edit_name"-->
<!--        app:layout_constraintVertical_bias="0.883" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
